--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -1,4 +1,4 @@
-name: Roqa Build Fixed
+name: Roqa Final Professional Build Fixed
 
 on:
   push:
@@ -10,21 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 1. Checkout Code
+      - name: 1. جلب الكود
         uses: actions/checkout@v4
 
-      - name: 2. Setup Java and Node
+      - name: 2. إعداد البيئة
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Setup Node.js
+      - name: إعداد Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
 
-      - name: 3. Clean and Install
+      - name: 3. التنظيف وعزل الكود
         run: |
           rm -rf android node_modules
           npm install --legacy-peer-deps
@@ -32,64 +32,78 @@ jobs:
           rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
           npm run build --if-present
 
-      - name: 4. Capacitor Sync
+      - name: 4. إضافة منصة أندرويد
         run: |
           npx cap config set webDir dist_web
           npx cap add android
           npx cap sync android
 
-      - name: 5. Fix Image Processing and Permissions
+      - name: 5. ضبط أمن الشبكة ومعالجة الصور
         run: |
           mkdir -p android/app/src/main/res/xml
           
           echo '<?xml version="1.0" encoding="utf-8"?>
           <network-security-config>
-            <domain-config cleartextTrafficPermitted="true">
-              <domain includeSubdomains="true">raqqa-v6cd.vercel.app</domain>
-            </domain-config>
-            <base-config cleartextTrafficPermitted="true">
-              <trust-anchors>
-                <certificates src="system" /><certificates src="user" />
-              </trust-anchors>
-            </base-config>
+              <domain-config cleartextTrafficPermitted="true">
+                  <domain includeSubdomains="true">raqqa-v6cd.vercel.app</domain>
+              </domain-config>
+              <base-config cleartextTrafficPermitted="true">
+                  <trust-anchors>
+                      <certificates src="system" /><certificates src="user" />
+                  </trust-anchors>
+              </base-config>
           </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml
 
           echo '<?xml version="1.0" encoding="utf-8"?>
           <paths>
-            <external-path name="my_images" path="." />
-            <cache-path name="my_cache" path="." />
-            <files-path name="my_files" path="." />
+              <external-path name="my_images" path="." />
+              <cache-path name="my_cache" path="." />
+              <external-files-path name="external_files" path="." />
           </paths>' > android/app/src/main/res/xml/file_paths.xml
 
           sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
 
           sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
           
-          PROVIDER_STUB='<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>'
-          sed -i "/<\/application>/i $PROVIDER_STUB" android/app/src/main/AndroidManifest.xml
+          PROVIDER_TEXT='<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>'
+          sed -i "/<\/application>/i $PROVIDER_TEXT" android/app/src/main/AndroidManifest.xml
 
-      - name: 6. Build APK
+      - name: 6. الأيقونات والوسائط
+        run: |
+          npm install @capacitor/assets --save-dev
+          npx capacitor-assets generate --android
+
+      - name: 7. بناء الملفات
         run: |
           cd android
           chmod +x gradlew
+          ./gradlew clean
           ./gradlew assembleRelease
-          cd ..
-          
-          keytool -genkey -v -keystore release.jks -alias roqa -keyalg RSA -keysize 2048 -validity 10000 \
-            -storepass "roqa123456" -keypass "roqa123456" \
-            -dname "CN=Roqa, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
-          
-          APK_PATH=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release.jks --ks-key-alias "roqa" --ks-pass pass:"roqa123456" --key-pass pass:"roqa123456" --out Roqa-Signed.apk "$APK_PATH"
+          ./gradlew bundleRelease
 
-      - name: 7. Upload Artifact
+      - name: 8. التوقيع النهائي
+        run: |
+          keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
+            -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+          
+          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
+          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+
+          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE"
+          jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias
+          cp "$AAB_FILE" Roqa-Final-Signed.aab
+
+      - name: 9. رفع النتائج
         uses: actions/upload-artifact@v4
         with:
-          name: Roqa-Release
-          path: Roqa-Signed.apk
+          name: Roqa-Full-Package-v${{ github.run_number }}
+          path: |
+            Roqa-Final-Signed.apk
+            Roqa-Final-Signed.aab
+            release_key.jks
