--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -1,4 +1,4 @@
-name: Roqa Final Professional Build Fixed
+[cite_start]name: Roqa Final Professional Build Fixed [cite: 1]
 
 on:
   push:
@@ -11,36 +11,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        uses: actions/checkout@v4
+        [cite_start]uses: actions/checkout@v4 [cite: 1]
 
       - name: 2. إعداد البيئة
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'temurin'
+          [cite_start]distribution: 'temurin' [cite: 1]
 
       - name: إعداد Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          [cite_start]node-version: '22' [cite: 2]
 
       - name: 3. التنظيف وعزل الكود
         run: |
-          rm -rf android node_modules
-          npm install --legacy-peer-deps
-          mkdir -p dist_web
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
-          npm run build --if-present
+          rm -rf android node_modules [cite: 3]
+          npm install --legacy-peer-deps [cite: 3]
+          mkdir -p dist_web [cite: 3]
+          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 3, 4]
+          npm run build --if-present [cite: 4]
 
       - name: 4. إضافة منصة أندرويد
         run: |
-          npx cap config set webDir dist_web
-          npx cap add android
-          npx cap sync android
+          npx cap config set webDir dist_web [cite: 5]
+          npx cap add android [cite: 5]
+          npx cap sync android [cite: 5]
 
       - name: 5. ضبط أمن الشبكة ومعالجة الصور
         run: |
-          mkdir -p android/app/src/main/res/xml
+          mkdir -p android/app/src/main/res/xml [cite: 6]
           
           echo '<?xml version="1.0" encoding="utf-8"?>
           <network-security-config>
@@ -52,58 +52,67 @@ jobs:
                       <certificates src="system" /><certificates src="user" />
                   </trust-anchors>
               </base-config>
-          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml
+          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml [cite: 6, 7]
 
+          # التعديل المحسن لمسارات الملفات لمعالجة مشكلة الصور
           echo '<?xml version="1.0" encoding="utf-8"?>
           <paths>
-              <external-path name="my_images" path="." />
+              <external-path name="my_images" path="Android/data/${{ github.event.repository.name }}/files/Pictures" />
+              <external-path name="external_files" path="." />
               <cache-path name="my_cache" path="." />
-              <external-files-path name="external_files" path="." />
+              <external-cache-path name="my_external_cache" path="." />
+              <files-path name="files" path="." />
           </paths>' > android/app/src/main/res/xml/file_paths.xml
 
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
+          # إضافة الأذونات الأساسية والمتقدمة
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 12]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml [cite: 12]
 
-          sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
+          # إضافة ميزات الكاميرا لضمان التوافق
+          sed -i '/<application/i \    <uses-feature android:name="android.hardware.camera" android:required="false" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-feature android:name="android.hardware.camera.autofocus" />' android/app/src/main/AndroidManifest.xml
+
+          [cite_start]sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml [cite: 12]
           
           PROVIDER_TEXT='<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true"><meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" /></provider>'
-          sed -i "/<\/application>/i $PROVIDER_TEXT" android/app/src/main/AndroidManifest.xml
+          [cite_start]sed -i "/<\/application>/i $PROVIDER_TEXT" android/app/src/main/AndroidManifest.xml [cite: 12]
 
       - name: 6. الأيقونات والوسائط
         run: |
-          npm install @capacitor/assets --save-dev
-          npx capacitor-assets generate --android
+          npm install @capacitor/assets --save-dev [cite: 13]
+          npx capacitor-assets generate --android [cite: 13]
 
       - name: 7. بناء الملفات
         run: |
-          cd android
-          chmod +x gradlew
-          ./gradlew clean
-          ./gradlew assembleRelease
-          ./gradlew bundleRelease
+          cd android [cite: 14]
+          chmod +x gradlew [cite: 14]
+          ./gradlew clean [cite: 14]
+          ./gradlew assembleRelease [cite: 14]
+          ./gradlew bundleRelease [cite: 14]
 
       - name: 8. التوقيع النهائي
         run: |
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 15]
           
-          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 15]
+          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 15]
 
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE"
-          jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias
-          cp "$AAB_FILE" Roqa-Final-Signed.aab
+          [cite_start]/usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks --ks-key-alias "roqa_alias" --ks-pass pass:"roqa_password_2026" --key-pass pass:"roqa_password_2026" --out Roqa-Final-Signed.apk "$APK_FILE" [cite: 16]
+          [cite_start]jarsigner -keystore release_key.jks -storepass "roqa_password_2026" -keypass "roqa_password_2026" "$AAB_FILE" roqa_alias [cite: 16]
+          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 16]
 
       - name: 9. رفع النتائج
         uses: actions/upload-artifact@v4
         with:
           name: Roqa-Full-Package-v${{ github.run_number }}
           path: |
-            Roqa-Final-Signed.apk
-            Roqa-Final-Signed.aab
-            release_key.jks
+            Roqa-Final-Signed.apk [cite: 17]
+            Roqa-Final-Signed.aab [cite: 17]
+            release_key.jks [cite: 17]
